Bug 62009 - The --purpose argument doesn't match certificates expected
Summary: The --purpose argument doesn't match certificates expected
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-08 06:16 UTC by Stef Walter
Modified: 2013-03-11 08:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
extract: Fix regression in --purpose option (3.12 KB, patch)
2013-03-08 07:34 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2013-03-08 06:16:56 UTC
/usr/bin/p11-kit extract -v --format=pem-bundle --filter=ca-anchors
--overwrite --purpose
server-auth /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem

produces empty file


/usr/bin/p11-kit extract -v --format=pem-bundle --filter=certificates
--overwrite --purpose
server-auth /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem

also produces empty file


/usr/bin/p11-kit extract -v --format=pem-bundle --filter=certificates
--overwrite /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem

does produce output, but is probably the full list, which isn't what we
want.


Trying to extract for the other usages produces empty files, too.
Comment 1 Stef Walter 2013-03-08 07:34:53 UTC
Created attachment 76145 [details] [review]
extract: Fix regression in --purpose option
Comment 2 Stef Walter 2013-03-11 08:42:09 UTC
Pushed to git master, and became part of p11-kit-0.16.3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.